# dump-env

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/_templates/: badges.html  moreinfo.html
dump_env/: __init__.py  cli.py  dumper.py  exceptions.py
tests/: conftest.py  test_cli.py  test_dumper.py  test_logics.py  test_strict_dumper.py
tests/__snapshots__/: test_logics.ambr
tests/fixtures/: .env.example  .env_with_template.example  .env_with_wrong_template.example
tests/test_cli/: test_e2e.py  test_escape.py  test_general.py  test_help.py  test_multiline.py  test_source.py  test_strict.py
tests/test_cli/__snapshots__/: test_escape.ambr  test_multiline.ambr
