[tool.poetry]
name = "dump-env"
version = "1.5.0"
description = "A utility tool to create .env files"

license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/dump-env"
homepage = "https://dump-env.readthedocs.io"

keywords = [
  "dotenv",
  ".env",
  "tempaltes",
  "secrets",
  "CI/CD"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[tool.poetry.scripts]
dump-env = "dump_env.cli:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
pytest = "^8.0"

wemake-python-styleguide = "^0.18"
flake8-pytest-style = "^1.5"
nitpick = "^0.35"

mypy = "^1.8"
doc8 = "^1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
sphinx-readable-theme = "^1.3"
m2r2 = "^0.3"
tomli = "^2.0"


[build-system]
requires = ["poetry>=1.9.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
